# WageLift

./: .gitignore  App.tsx  CLEANUP_SUMMARY.md  CPI_CALCULATION_IMPLEMENTATION.md  CRITICAL_COMPLETION_ANALYSIS.md  DEMO_SETUP.md  FASTAPI_SALARY_INTEGRATION.md  FINAL_SYSTEM_STATUS.md  Makefile  PERFORMANCE_MONITORING_SETUP.md  PHASE1_COMMIT_MESSAGE.txt  PHASE_1_COMPLETION_FINAL.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_IMPLEMENTATION_STATUS.md  PROJECT_COMPLETION_ROADMAP.md  PROJECT_SAVED_STATUS.md  README.md  SETUP_AND_RUN.md  START_CLEAN.bat  START_SERVERS.bat  SUPABASE_SETUP.md  SYSTEM_COMPLETION_REPORT.md  SYSTEM_STATUS_CARD.md  TASK_14_MOBILE_APP_COMPLETION.md  TESTING_STRATEGY.md  UX_IMPROVEMENTS_IMPLEMENTED.md  WAGELIFT_ERROR_ANALYSIS_REPORT.md  WAGELIFT_FINAL_FUNCTIONALITY_REPORT.md  WAGELIFT_PROJECT_COMPLETION.md  WAGELIFT_SETUP_COMPLETION_SUMMARY.md  WAGELIFT_SYSTEM_GUIDE.md  app.json  check_dependencies.bat  create_essential_tables.sql  docker-compose.dev.yml  docker-compose.yml  email-send-modal.tsx  health_check.sh  package-lock.json  package.json  (+10 more)
backend/: .dockerignore  .env.example  Dockerfile  FINAL_SETUP_INSTRUCTIONS.md  QUICK_START.md  SUPABASE_INTEGRATION_COMPLETE.md  SUPABASE_INTEGRATION_GUIDE.md  SUPABASE_SETUP_INSTRUCTIONS.md  SYSTEM_OPTIMIZATION_REPORT.md  SYSTEM_STATUS.md  TASK_15_COMPLETION_REPORT.md  WAGELIFT_COMPREHENSIVE_ERROR_ASSESSMENT_COMPLETE_FINAL_REPORT.md  WAGELIFT_COMPREHENSIVE_ERROR_ASSESSMENT_FINAL_REPORT.md  WAGELIFT_FINAL_100_PERCENT_ROBUSTNESS_REPORT.md  alembic.ini  comprehensive_system_test.py  core_functionality_test.py  create_supabase_schema.sql  create_supabase_tables.sql  demo_app.py  env.example  pyproject.toml  requirements-basic.txt  requirements-minimal.txt  requirements-ultra-minimal.txt  requirements.txt  run_migration.py  run_migration_local.py  run_migration_sync.py  simple_main.py  start_backend.sh  supabase-schema.sql  supabase_schema_setup.sql  test_advanced_concurrency_errors.py  test_complete_system.py  test_configuration_debug.py  test_configuration_environment_errors.py  test_configuration_fixed.py  test_db_simple.py  test_error_recovery_graceful_degradation.py  (+12 more)
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  benchmark.py  editor.py  (+7 more)
backend/migrations/: 003_create_editor_tables.sql
backend/scripts/: init_db.py  init_db_simple.py  test_ai_accuracy_simple.py  test_ai_letter_generation.py  test_ai_letter_generation_comprehensive.py  test_auth0.py  test_benchmark_integration.py  test_bls_service.py  test_cpi_data_service.py  test_cpi_frontend_integration.py  test_cpi_integration.py  test_db.py  test_db_simple.py  test_performance_monitoring.py  test_salary_integration.py  test_supabase.py
backend/tests/: test_basic_functionality.py  test_main.py  test_numeric_validation.py  test_openai_service.py  test_raise_letter_generation.py
(+178 files in other folders)
